fix: custom events  tooltip  alignment in calendar (#232)
fix: custom events  tooltip  alignment in calendar

--- a/src/scss/filejet-scss/calender/_calender.scss
+++ b/src/scss/filejet-scss/calender/_calender.scss
@@ -105,6 +105,7 @@ body .caledar-event-upcoming {
   }
   .customEle, .fc-event-description{
     content-visibility: auto;
+    overflow-x: clip;
   }
   .fc-day-today,.fc-view-harness-active{
     @extend .bg-white;
